--- a/po/cs.po
+++ b/po/cs.po
@@ -14,7 +14,7 @@
 # Daniel Rusek <mail@asciiwolf.com>, 2018.
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: NetworkManager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-06-01 17:17+0200\n"
 "PO-Revision-Date: 2018-09-30 14:02+0200\n"
