--- a/po/de.po
+++ b/po/de.po
@@ -21,7 +21,7 @@
 # maxbachmann <kontakt@maxbachmann.de>, 2019
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: NetworkManager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-06-01 17:17+0200\n"
 "PO-Revision-Date: 2018-07-15 17:31+0200\n"
