--- a/po/eo.po
+++ b/po/eo.po
@@ -11,7 +11,7 @@
 # Thomas HALLER <thaller@redhat.com>, 2017. #zanata
 msgid ""
 msgstr ""
-"Project-Id-Version: networkmanager\n"
+"Project-Id-Version: NetworkManager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-06-01 17:17+0200\n"
 "PO-Revision-Date: 2020-01-12 14:16+0100\n"
