--- a/po/es.po
+++ b/po/es.po
@@ -21,7 +21,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: master\n"
+"Project-Id-Version: NetworkManager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-06-01 17:17+0200\n"
 "PO-Revision-Date: 2019-05-03 09:09+0200\n"
