--- a/po/gd.po
+++ b/po/gd.po
@@ -5,7 +5,7 @@
 # GunChleoc <fios@foramnagaidhlig.net>, 2016.
 msgid ""
 msgstr ""
-"Project-Id-Version: network-manager\n"
+"Project-Id-Version: NetworkManager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-06-01 17:17+0200\n"
 "PO-Revision-Date: 2016-01-29 11:29+0100\n"
