--- a/po/id.po
+++ b/po/id.po
@@ -7,7 +7,7 @@
 # Thomas Haller <thaller@redhat.com>, 2017. #zanata
 msgid ""
 msgstr ""
-"Project-Id-Version: NetworkManager master\n"
+"Project-Id-Version: NetworkManager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-06-01 17:17+0200\n"
 "PO-Revision-Date: 2019-12-31 15:54+0700\n"
