--- a/po/it.po
+++ b/po/it.po
@@ -9,7 +9,7 @@
 # Milo Casagrande <milo@milo.name>, 2011, 2012, 2013, 2014, 2019.
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: NetworkManager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-06-01 17:17+0200\n"
 "PO-Revision-Date: 2019-03-21 14:53+0100\n"
