--- a/po/ja.po
+++ b/po/ja.po
@@ -9,7 +9,7 @@
 # ljanda <ljanda@redhat.com>, 2019. #zanata
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: NetworkManager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-06-01 17:17+0200\n"
 "PO-Revision-Date: 2019-08-15 04:44+0000\n"
