--- a/po/pa.po
+++ b/po/pa.po
@@ -10,7 +10,7 @@
 # Thomas Haller <thaller@redhat.com>, 2017. #zanata.
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: NetworkManager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-06-01 17:17+0200\n"
 "PO-Revision-Date: 2019-04-19 10:17-0500\n"
