--- a/po/ro.po
+++ b/po/ro.po
@@ -5,7 +5,7 @@
 # Sergiu Bivol <sergiu@cip.md>, 2022.
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: NetworkManager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-03-14 12:13+0000\n"
 "PO-Revision-Date: 2022-03-14 13:23+0000\n"
