--- a/po/ru.po
+++ b/po/ru.po
@@ -18,7 +18,7 @@
 # Дронова Ю <juliette.tux@gmail.com>, 2020, 2021.
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: NetworkManager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-06-01 17:17+0200\n"
 "PO-Revision-Date: 2021-03-31 20:27+0300\n"
