--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -17,7 +17,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: NetworkManager main\n"
+"Project-Id-Version: NetworkManager\n"
 "Report-Msgid-Bugs-To: https://gitlab.freedesktop.org/NetworkManager/"
 "NetworkManager/issues\n"
 "POT-Creation-Date: 2021-11-07 03:29+0000\n"
