--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -17,7 +17,7 @@
 # Hsiu-Ming Chang <cges30901@gmail.com>, 2019.
 msgid ""
 msgstr ""
-"Project-Id-Version: NetworkManager master\n"
+"Project-Id-Version: NetworkManager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-06-01 17:17+0200\n"
 "PO-Revision-Date: 2019-06-28 19:18+0800\n"
