--- a/po/bn_IN.po
+++ b/po/bn_IN.po
@@ -15,7 +15,7 @@ msgstr ""
 "PO-Revision-Date: 2017-04-21 05:09-0400\n"
 "Last-Translator: Copied by Zanata <copied-by-zanata@zanata.org>\n"
 "Language-Team: Bengali (India) <kde-i18n-doc@kde.org>\n"
-"Language: bn-IN\n"
+"Language: bn_IN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
