--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -15,7 +15,7 @@ msgstr ""
 "PO-Revision-Date: 2017-04-21 05:17-0400\n"
 "Last-Translator: Copied by Zanata <copied-by-zanata@zanata.org>\n"
 "Language-Team: Sugar Labs\n"
-"Language: en-GB\n"
+"Language: en_GB\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
