--- a/po/oc.po
+++ b/po/oc.po
@@ -11,7 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2021-05-18 21:37+0200\n"
 "Last-Translator: Quentin PAGÈS\n"
 "Language-Team: Tot en òc (totenoc.eu)\n"
-"Language: oci\n"
+"Language: oc\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
