--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -12,7 +12,7 @@ msgstr ""
 "PO-Revision-Date: 2017-04-21 06:26-0400\n"
 "Last-Translator: Copied by Zanata <copied-by-zanata@zanata.org>\n"
 "Language-Team: Chinese (Hong Kong) <community@linuxhall.org>\n"
-"Language: zh-HK\n"
+"Language: zh_HK\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
